Add integration tests for monster and skills, implement saga pattern, and enhance random utility
- Created `MonsterSkillsIntegrationTest` to validate monster creation, retrieval, and skill management.
- Developed `RealisticDataIntegrationTest` for various monster scenarios and skill interactions.
- Implemented `SagaPatternIntegrationTest` to test the complete saga flow, including invocation and compensation mechanisms.
- Added `RandomTest` for testing random number generation utility.
- Introduced `application-test.yml` for test-specific configurations.